Disabling liquid test and fixing liquid overflow

--- a/frontend/src/app/components/address/address.component.scss
+++ b/frontend/src/app/components/address/address.component.scss
@@ -98,13 +98,6 @@ h1 {
 .liquid-address {
   .address-table {
     table-layout: fixed;
-
-    tr td:first-child {
-      width: 170px;
-    }
-    tr td:last-child {
-      width: 80%;
-    }
   }
 }
 
